# mu-classic

./: .gitmodules  CLAUDE.md  README.md  launch.sh  model_viewer.sh
.claude/skills/inspect-db/: SKILL.md
.claude/skills/launch/: SKILL.md
.claude/skills/search-ref/: SKILL.md
client/: CMakeLists.txt  client_log.txt
client/include/: BMDParser.hpp  BMDUtils.hpp  BoidManager.hpp  CharacterSelect.hpp  ChromeGlow.hpp  ClickEffect.hpp  ClientPacketHandler.hpp  ClientTypes.hpp  FireEffect.hpp  FrustumCulling.hpp  GameUI.hpp  GrassRenderer.hpp  GroundItemRenderer.hpp  HeroCharacter.hpp  InputHandler.hpp  InventoryUI.hpp  ItemDatabase.hpp  ItemModelManager.hpp  MeshBuffers.hpp  MonsterManager.hpp  NpcManager.hpp  ObjectRenderer.hpp  PacketDefs.hpp  PathFinder.hpp  Screenshot.hpp  ServerConnection.hpp  Shader.hpp  Sky.hpp  SoundManager.hpp  Terrain.hpp  TextureLoader.hpp  UICoords.hpp  UITexture.hpp  VFXManager.hpp  ViewerCommon.hpp  imgui_impl_bgfx.h
client/shaders/: billboard.vert  line.frag
client/shaders/bgfx/: common.sh  fs_billboard.sc  fs_blur.sc  fs_bright_extract.sc  fs_depth.sc  fs_grass.sc  fs_ground.sc  fs_imgui.sc  fs_leaf.sc  fs_line.sc  fs_model.sc  fs_outline.sc  fs_postprocess.sc  fs_shadow.sc  fs_sky.sc  fs_terrain.sc  varying.def.sc  vs_billboard.sc  vs_depth.sc  vs_grass.sc  vs_ground.sc  vs_model.sc  vs_model_skinned.sc  vs_outline.sc  vs_postprocess.sc  vs_shadow.sc  vs_sky.sc  vs_terrain.sc
client/src/: BMDParser.cpp  BMDUtils.cpp  BoidManager.cpp  Camera.cpp  CharacterSelect.cpp  ChromeGlow.cpp  ClickEffect.cpp  ClientPacketHandler.cpp  FireEffect.cpp  GameUI.cpp  GrassRenderer.cpp  GroundItemRenderer.cpp  HUD.cpp  HeroCharacter.cpp  HeroCharacterMount.cpp  HeroCharacterPet.cpp  InputHandler.cpp  InventoryUI.cpp  InventoryUISkills.cpp  InventoryUITooltip.cpp  InventoryUI_Internal.hpp  ItemDatabase.cpp  ItemModelManager.cpp  MonsterManager.cpp  MonsterManagerEffects.cpp  MonsterManagerRender.cpp  NetworkClient.cpp  NpcManager.cpp  ObjectRenderer.cpp  RayPicker.cpp  Screenshot.cpp  ServerConnection.cpp  Sky.cpp  SoundManager.cpp  SystemMessageLog.cpp  Terrain.cpp  TerrainParser.cpp  TextureLoader.cpp  UITexture.cpp  UIWidget.cpp  (+11 more)
client/test/: regression_test.sh
docs/: build-and-project.md  character-system.md  coordinate-system-test.md  death-gorgon-fire-research.md  fire-particle-deep-analysis.md  lost-tower-analysis.md  map-analysis-tools.md  monster-system.md  rendering.md  terrain-and-environment.md  ui-system.md  wave3-constant-fire.md
server/: server_log.txt
server/include/: Database.hpp  GameWorld.hpp  PacketDefs.hpp  Session.hpp
server/include/handlers/: CharacterHandler.hpp  CombatHandler.hpp  InventoryHandler.hpp  QuestHandler.hpp
server/src/: Database.cpp  GameWorld.cpp  PacketHandler.cpp  PathFinder.cpp  Server.cpp  Session.cpp
server/src/handlers/: CharacterHandler.cpp  CharacterSelectHandler.cpp  CombatHandler.cpp  InventoryHandler.cpp  QuestHandler.cpp  ShopHandler.cpp  WorldHandler.cpp
tools/: analyze_fountain.py  analyze_fountain_terrain.py  analyze_grass.py  bmd_inspect.cpp  check_grass_on_rocks.py  check_rock_positions.py  convert_mulv_slots.py  dump_grass_positions.py  enhance_textures.py  generate_slot_icons.py  map_analyze  map_analyze.cpp  map_inspect  map_inspect.cpp  process_slot_icons.py  rebuild_skill_icons.py  smart_supersample.py  smart_upscale.py  smart_upscale_v2.py  supersample.py  tile_viewer.py  upscale_2x_detail.py  upscale_armor_2x.py  upscale_armor_sets.sh  upscale_buildings_2x.py  upscale_hq.sh  upscale_inplace.sh  upscale_model_textures.sh  upscale_pipeline.sh  upscale_textures.sh  upscale_tiles.sh  upscale_world_tiles.py
tools/quest_editor/: app.js  index.html  server.py  style.css
